lab3/Code/syntax.output
Terminals unused in grammar

    LOWER_THAN_LP


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec SEMI
    7       | Specifier FunDec CompSt
    8       | Specifier error SEMI
    9       | Specifier error CompSt
   10       | Specifier FunDec error
   11       | error SEMI

   12 ExtDecList: VarDec
   13           | VarDec COMMA ExtDecList

   14 Specifier: TYPE
   15          | StructSpecifier

   16 StructSpecifier: STRUCT OptTag LC DefList RC
   17                | STRUCT Tag
   18                | STRUCT error
   19                | STRUCT OptTag LC error RC

   20 OptTag: %empty
   21       | ID

   22 Tag: ID

   23 VarDec: ID
   24       | VarDec LB INT RB
   25       | VarDec LB error RB
   26       | error LB INT RB

   27 FunDec: ID LP VarList RP
   28       | ID LP RP
   29       | ID LP error RP
   30       | error LP RP
   31       | ID LP VarList error
   32       | ID error VarList RP
   33       | ID error RP
   34       | ID LP error

   35 VarList: ParamDec COMMA VarList
   36        | ParamDec

   37 ParamDec: Specifier VarDec

   38 CompSt: LC DefList StmtList RC

   39 StmtList: %empty
   40         | Stmt StmtList

   41 Stmt: Exp SEMI
   42     | CompSt
   43     | RETURN Exp SEMI
   44     | IF LP Exp RP Stmt
   45     | IF LP Exp RP Stmt ELSE Stmt
   46     | WHILE LP Exp RP Stmt
   47     | IF error ELSE Stmt
   48     | IF error Stmt
   49     | WHILE error Stmt
   50     | RETURN error SEMI
   51     | error SEMI

   52 DefList: %empty
   53        | Def DefList

   54 Def: Specifier DecList SEMI
   55    | Specifier error SEMI

   56 DecList: Dec
   57        | Dec COMMA DecList
   58        | error DecList

   59 Dec: VarDec
   60    | VarDec ASSIGNOP Exp
   61    | VarDec error Exp
   62    | VarDec ASSIGNOP error

   63 Exp: Exp ASSIGNOP Exp
   64    | Exp AND Exp
   65    | Exp OR Exp
   66    | Exp RELOP Exp
   67    | Exp PLUS Exp
   68    | Exp MINUS Exp
   69    | Exp STAR Exp
   70    | Exp DIV Exp
   71    | LP Exp RP
   72    | MINUS Exp
   73    | NOT Exp
   74    | ID LP Args RP
   75    | ID LP RP
   76    | Exp LB Exp RB
   77    | Exp DOT ID
   78    | ID
   79    | INT
   80    | FLOAT
   81    | Exp error Exp
   82    | Exp error
   83    | ID LP error RP

   84 Args: Exp COMMA Args
   85     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 9 10 11 18 19 25 26 29 30 31 32 33 34 47 48 49 50 51 55 58 61 62 81 82 83
    INT (258) 24 26 79
    FLOAT (259) 80
    ID (260) 21 22 23 27 28 29 31 32 33 34 74 75 77 78 83
    PLUS (261) 67
    MINUS (262) 68 72
    STAR (263) 69
    DIV (264) 70
    ASSIGNOP (265) 60 62 63
    SEMI (266) 4 5 6 8 11 41 43 50 51 54 55
    COMMA (267) 13 35 57 84
    RELOP (268) 66
    AND (269) 64
    OR (270) 65
    DOT (271) 77
    NOT (272) 73
    TYPE (273) 14
    LP (274) 27 28 29 30 31 34 44 45 46 71 74 75 83
    RP (275) 27 28 29 30 32 33 44 45 46 71 74 75 83
    LB (276) 24 25 26 76
    RB (277) 24 25 26 76
    LC (278) 16 19 38
    RC (279) 16 19 38
    STRUCT (280) 16 17 18 19
    RETURN (281) 43 50
    IF (282) 44 45 47 48
    ELSE (283) 45 47
    WHILE (284) 46 49
    LOWER_THAN_LB (285)
    LOWER_THAN_LP (286)
    EXP_ERROR (287)
    LOWER_ID (288)
    HIGHER_ID (289)
    UMINUS (290)
    LOWER_THAN_ELSE (291)


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    Program (38)
        on left: 1
        on right: 0
    ExtDefList (39)
        on left: 2 3
        on right: 1 3
    ExtDef (40)
        on left: 4 5 6 7 8 9 10 11
        on right: 3
    ExtDecList (41)
        on left: 12 13
        on right: 4 13
    Specifier (42)
        on left: 14 15
        on right: 4 5 6 7 8 9 10 37 54 55
    StructSpecifier (43)
        on left: 16 17 18 19
        on right: 15
    OptTag (44)
        on left: 20 21
        on right: 16 19
    Tag (45)
        on left: 22
        on right: 17
    VarDec (46)
        on left: 23 24 25 26
        on right: 12 13 24 25 37 59 60 61 62
    FunDec (47)
        on left: 27 28 29 30 31 32 33 34
        on right: 6 7 10
    VarList (48)
        on left: 35 36
        on right: 27 31 32 35
    ParamDec (49)
        on left: 37
        on right: 35 36
    CompSt (50)
        on left: 38
        on right: 7 9 42
    StmtList (51)
        on left: 39 40
        on right: 38 40
    Stmt (52)
        on left: 41 42 43 44 45 46 47 48 49 50 51
        on right: 40 44 45 46 47 48 49
    DefList (53)
        on left: 52 53
        on right: 16 38 53
    Def (54)
        on left: 54 55
        on right: 53
    DecList (55)
        on left: 56 57 58
        on right: 54 57 58
    Dec (56)
        on left: 59 60 61 62
        on right: 56 57
    Exp (57)
        on left: 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83
        on right: 41 43 44 45 46 60 61 63 64 65 66 67 68 69 70 71 72 73 76 77 81 82 84 85
    Args (58)
        on left: 84 85
        on right: 74 84


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

   11 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   14 Specifier: TYPE .

    $default  reduce using rule 14 (Specifier)


State 3

   16 StructSpecifier: STRUCT . OptTag LC DefList RC
   17                | STRUCT . Tag
   18                | STRUCT . error
   19                | STRUCT . OptTag LC error RC

    error  shift, and go to state 10
    ID     shift, and go to state 11

    LC  reduce using rule 20 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec SEMI
    7       | Specifier . FunDec CompSt
    8       | Specifier . error SEMI
    9       | Specifier . error CompSt
   10       | Specifier . FunDec error

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   15 Specifier: StructSpecifier .

    $default  reduce using rule 15 (Specifier)


State 9

   11 ExtDef: error SEMI .

    $default  reduce using rule 11 (ExtDef)


State 10

   18 StructSpecifier: STRUCT error .

    $default  reduce using rule 18 (StructSpecifier)


State 11

   21 OptTag: ID .
   22 Tag: ID .

    LC        reduce using rule 21 (OptTag)
    $default  reduce using rule 22 (Tag)


State 12

   16 StructSpecifier: STRUCT OptTag . LC DefList RC
   19                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 22


State 13

   17 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 17 (StructSpecifier)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 16

    8 ExtDef: Specifier error . SEMI
    9       | Specifier error . CompSt
   26 VarDec: error . LB INT RB
   30 FunDec: error . LP RP

    SEMI  shift, and go to state 23
    LP    shift, and go to state 24
    LB    shift, and go to state 25
    LC    shift, and go to state 26

    CompSt  go to state 27


State 17

   23 VarDec: ID .
   27 FunDec: ID . LP VarList RP
   28       | ID . LP RP
   29       | ID . LP error RP
   31       | ID . LP VarList error
   32       | ID . error VarList RP
   33       | ID . error RP
   34       | ID . LP error

    error  shift, and go to state 28
    LP     shift, and go to state 29

    SEMI   reduce using rule 23 (VarDec)
    COMMA  reduce using rule 23 (VarDec)
    LB     reduce using rule 23 (VarDec)


State 18

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 30


State 20

   12 ExtDecList: VarDec .
   13           | VarDec . COMMA ExtDecList
   24 VarDec: VarDec . LB INT RB
   25       | VarDec . LB error RB

    COMMA  shift, and go to state 31
    LB     shift, and go to state 32

    $default  reduce using rule 12 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec . SEMI
    7       | Specifier FunDec . CompSt
   10       | Specifier FunDec . error

    error  shift, and go to state 33
    SEMI   shift, and go to state 34
    LC     shift, and go to state 26

    CompSt  go to state 35


State 22

   16 StructSpecifier: STRUCT OptTag LC . DefList RC
   19                | STRUCT OptTag LC . error RC

    error   shift, and go to state 36
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 52 (DefList)

    Specifier        go to state 37
    StructSpecifier  go to state 8
    DefList          go to state 38
    Def              go to state 39


State 23

    8 ExtDef: Specifier error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 24

   30 FunDec: error LP . RP

    RP  shift, and go to state 40


State 25

   26 VarDec: error LB . INT RB

    INT  shift, and go to state 41


State 26

   38 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 52 (DefList)

    Specifier        go to state 37
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 39


State 27

    9 ExtDef: Specifier error CompSt .

    $default  reduce using rule 9 (ExtDef)


State 28

   32 FunDec: ID error . VarList RP
   33       | ID error . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 43
    STRUCT  shift, and go to state 3

    Specifier        go to state 44
    StructSpecifier  go to state 8
    VarList          go to state 45
    ParamDec         go to state 46


State 29

   27 FunDec: ID LP . VarList RP
   28       | ID LP . RP
   29       | ID LP . error RP
   31       | ID LP . VarList error
   34       | ID LP . error

    error   shift, and go to state 47
    TYPE    shift, and go to state 2
    RP      shift, and go to state 48
    STRUCT  shift, and go to state 3

    Specifier        go to state 44
    StructSpecifier  go to state 8
    VarList          go to state 49
    ParamDec         go to state 46


State 30

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 31

   13 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 50
    ID     shift, and go to state 51

    ExtDecList  go to state 52
    VarDec      go to state 20


State 32

   24 VarDec: VarDec LB . INT RB
   25       | VarDec LB . error RB

    error  shift, and go to state 53
    INT    shift, and go to state 54


State 33

   10 ExtDef: Specifier FunDec error .

    $default  reduce using rule 10 (ExtDef)


State 34

    6 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 6 (ExtDef)


State 35

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 36

   19 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 55


State 37

   54 Def: Specifier . DecList SEMI
   55    | Specifier . error SEMI

    error  shift, and go to state 56
    ID     shift, and go to state 51

    VarDec   go to state 57
    DecList  go to state 58
    Dec      go to state 59


State 38

   16 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 60


State 39

   53 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 52 (DefList)

    Specifier        go to state 37
    StructSpecifier  go to state 8
    DefList          go to state 61
    Def              go to state 39


State 40

   30 FunDec: error LP RP .

    $default  reduce using rule 30 (FunDec)


State 41

   26 VarDec: error LB INT . RB

    RB  shift, and go to state 62


State 42

   38 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 63
    INT     shift, and go to state 64
    FLOAT   shift, and go to state 65
    ID      shift, and go to state 66
    MINUS   shift, and go to state 67
    NOT     shift, and go to state 68
    LP      shift, and go to state 69
    LC      shift, and go to state 26
    RETURN  shift, and go to state 70
    IF      shift, and go to state 71
    WHILE   shift, and go to state 72

    RC  reduce using rule 39 (StmtList)

    CompSt    go to state 73
    StmtList  go to state 74
    Stmt      go to state 75
    Exp       go to state 76


State 43

   33 FunDec: ID error RP .

    $default  reduce using rule 33 (FunDec)


State 44

   37 ParamDec: Specifier . VarDec

    error  shift, and go to state 50
    ID     shift, and go to state 51

    VarDec  go to state 77


State 45

   32 FunDec: ID error VarList . RP

    RP  shift, and go to state 78


State 46

   35 VarList: ParamDec . COMMA VarList
   36        | ParamDec .

    COMMA  shift, and go to state 79

    $default  reduce using rule 36 (VarList)


State 47

   29 FunDec: ID LP error . RP
   34       | ID LP error .

    RP  shift, and go to state 80

    $default  reduce using rule 34 (FunDec)


State 48

   28 FunDec: ID LP RP .

    $default  reduce using rule 28 (FunDec)


State 49

   27 FunDec: ID LP VarList . RP
   31       | ID LP VarList . error

    error  shift, and go to state 81
    RP     shift, and go to state 82


State 50

   26 VarDec: error . LB INT RB

    LB  shift, and go to state 25


State 51

   23 VarDec: ID .

    $default  reduce using rule 23 (VarDec)


State 52

   13 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 13 (ExtDecList)


State 53

   25 VarDec: VarDec LB error . RB

    RB  shift, and go to state 83


State 54

   24 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 84


State 55

   19 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 19 (StructSpecifier)


State 56

   26 VarDec: error . LB INT RB
   55 Def: Specifier error . SEMI
   58 DecList: error . DecList

    error  shift, and go to state 85
    ID     shift, and go to state 51
    SEMI   shift, and go to state 86
    LB     shift, and go to state 25

    VarDec   go to state 57
    DecList  go to state 87
    Dec      go to state 59


State 57

   24 VarDec: VarDec . LB INT RB
   25       | VarDec . LB error RB
   59 Dec: VarDec .
   60    | VarDec . ASSIGNOP Exp
   61    | VarDec . error Exp
   62    | VarDec . ASSIGNOP error

    error     shift, and go to state 88
    ASSIGNOP  shift, and go to state 89
    LB        shift, and go to state 32

    SEMI   reduce using rule 59 (Dec)
    COMMA  reduce using rule 59 (Dec)


State 58

   54 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 90


State 59

   56 DecList: Dec .
   57        | Dec . COMMA DecList

    COMMA  shift, and go to state 91

    $default  reduce using rule 56 (DecList)


State 60

   16 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 16 (StructSpecifier)


State 61

   53 DefList: Def DefList .

    $default  reduce using rule 53 (DefList)


State 62

   26 VarDec: error LB INT RB .

    $default  reduce using rule 26 (VarDec)


State 63

   51 Stmt: error . SEMI

    SEMI  shift, and go to state 92


State 64

   79 Exp: INT .

    $default  reduce using rule 79 (Exp)


State 65

   80 Exp: FLOAT .

    $default  reduce using rule 80 (Exp)


State 66

   74 Exp: ID . LP Args RP
   75    | ID . LP RP
   78    | ID .
   83    | ID . LP error RP

    LP  shift, and go to state 93

    $default  reduce using rule 78 (Exp)


State 67

   72 Exp: MINUS . Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 94


State 68

   73 Exp: NOT . Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 95


State 69

   71 Exp: LP . Exp RP

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 96


State 70

   43 Stmt: RETURN . Exp SEMI
   50     | RETURN . error SEMI

    error  shift, and go to state 97
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 98


State 71

   44 Stmt: IF . LP Exp RP Stmt
   45     | IF . LP Exp RP Stmt ELSE Stmt
   47     | IF . error ELSE Stmt
   48     | IF . error Stmt

    error  shift, and go to state 99
    LP     shift, and go to state 100


State 72

   46 Stmt: WHILE . LP Exp RP Stmt
   49     | WHILE . error Stmt

    error  shift, and go to state 101
    LP     shift, and go to state 102


State 73

   42 Stmt: CompSt .

    $default  reduce using rule 42 (Stmt)


State 74

   38 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 103


State 75

   40 StmtList: Stmt . StmtList

    error   shift, and go to state 63
    INT     shift, and go to state 64
    FLOAT   shift, and go to state 65
    ID      shift, and go to state 66
    MINUS   shift, and go to state 67
    NOT     shift, and go to state 68
    LP      shift, and go to state 69
    LC      shift, and go to state 26
    RETURN  shift, and go to state 70
    IF      shift, and go to state 71
    WHILE   shift, and go to state 72

    RC  reduce using rule 39 (StmtList)

    CompSt    go to state 73
    StmtList  go to state 104
    Stmt      go to state 75
    Exp       go to state 76


State 76

   41 Stmt: Exp . SEMI
   63 Exp: Exp . ASSIGNOP Exp
   64    | Exp . AND Exp
   65    | Exp . OR Exp
   66    | Exp . RELOP Exp
   67    | Exp . PLUS Exp
   68    | Exp . MINUS Exp
   69    | Exp . STAR Exp
   70    | Exp . DIV Exp
   76    | Exp . LB Exp RB
   77    | Exp . DOT ID
   81    | Exp . error Exp
   82    | Exp . error

    error     shift, and go to state 105
    PLUS      shift, and go to state 106
    MINUS     shift, and go to state 107
    STAR      shift, and go to state 108
    DIV       shift, and go to state 109
    ASSIGNOP  shift, and go to state 110
    SEMI      shift, and go to state 111
    RELOP     shift, and go to state 112
    AND       shift, and go to state 113
    OR        shift, and go to state 114
    DOT       shift, and go to state 115
    LB        shift, and go to state 116


State 77

   24 VarDec: VarDec . LB INT RB
   25       | VarDec . LB error RB
   37 ParamDec: Specifier VarDec .

    LB  shift, and go to state 32

    $default  reduce using rule 37 (ParamDec)


State 78

   32 FunDec: ID error VarList RP .

    $default  reduce using rule 32 (FunDec)


State 79

   35 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 44
    StructSpecifier  go to state 8
    VarList          go to state 117
    ParamDec         go to state 46


State 80

   29 FunDec: ID LP error RP .

    $default  reduce using rule 29 (FunDec)


State 81

   31 FunDec: ID LP VarList error .

    $default  reduce using rule 31 (FunDec)


State 82

   27 FunDec: ID LP VarList RP .

    $default  reduce using rule 27 (FunDec)


State 83

   25 VarDec: VarDec LB error RB .

    $default  reduce using rule 25 (VarDec)


State 84

   24 VarDec: VarDec LB INT RB .

    $default  reduce using rule 24 (VarDec)


State 85

   26 VarDec: error . LB INT RB
   58 DecList: error . DecList

    error  shift, and go to state 85
    ID     shift, and go to state 51
    LB     shift, and go to state 25

    VarDec   go to state 57
    DecList  go to state 87
    Dec      go to state 59


State 86

   55 Def: Specifier error SEMI .

    $default  reduce using rule 55 (Def)


State 87

   58 DecList: error DecList .

    $default  reduce using rule 58 (DecList)


State 88

   61 Dec: VarDec error . Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 118


State 89

   60 Dec: VarDec ASSIGNOP . Exp
   62    | VarDec ASSIGNOP . error

    error  shift, and go to state 119
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 120


State 90

   54 Def: Specifier DecList SEMI .

    $default  reduce using rule 54 (Def)


State 91

   57 DecList: Dec COMMA . DecList

    error  shift, and go to state 85
    ID     shift, and go to state 51

    VarDec   go to state 57
    DecList  go to state 121
    Dec      go to state 59


State 92

   51 Stmt: error SEMI .

    $default  reduce using rule 51 (Stmt)


State 93

   74 Exp: ID LP . Args RP
   75    | ID LP . RP
   83    | ID LP . error RP

    error  shift, and go to state 122
    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69
    RP     shift, and go to state 123

    Exp   go to state 124
    Args  go to state 125


State 94

   63 Exp: Exp . ASSIGNOP Exp
   64    | Exp . AND Exp
   65    | Exp . OR Exp
   66    | Exp . RELOP Exp
   67    | Exp . PLUS Exp
   68    | Exp . MINUS Exp
   69    | Exp . STAR Exp
   70    | Exp . DIV Exp
   72    | MINUS Exp .
   76    | Exp . LB Exp RB
   77    | Exp . DOT ID
   81    | Exp . error Exp
   82    | Exp . error

    DOT  shift, and go to state 115
    LB   shift, and go to state 116

    $default  reduce using rule 72 (Exp)


State 95

   63 Exp: Exp . ASSIGNOP Exp
   64    | Exp . AND Exp
   65    | Exp . OR Exp
   66    | Exp . RELOP Exp
   67    | Exp . PLUS Exp
   68    | Exp . MINUS Exp
   69    | Exp . STAR Exp
   70    | Exp . DIV Exp
   73    | NOT Exp .
   76    | Exp . LB Exp RB
   77    | Exp . DOT ID
   81    | Exp . error Exp
   82    | Exp . error

    DOT  shift, and go to state 115
    LB   shift, and go to state 116

    $default  reduce using rule 73 (Exp)


State 96

   63 Exp: Exp . ASSIGNOP Exp
   64    | Exp . AND Exp
   65    | Exp . OR Exp
   66    | Exp . RELOP Exp
   67    | Exp . PLUS Exp
   68    | Exp . MINUS Exp
   69    | Exp . STAR Exp
   70    | Exp . DIV Exp
   71    | LP Exp . RP
   76    | Exp . LB Exp RB
   77    | Exp . DOT ID
   81    | Exp . error Exp
   82    | Exp . error

    error     shift, and go to state 105
    PLUS      shift, and go to state 106
    MINUS     shift, and go to state 107
    STAR      shift, and go to state 108
    DIV       shift, and go to state 109
    ASSIGNOP  shift, and go to state 110
    RELOP     shift, and go to state 112
    AND       shift, and go to state 113
    OR        shift, and go to state 114
    DOT       shift, and go to state 115
    RP        shift, and go to state 126
    LB        shift, and go to state 116


State 97

   50 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 127


State 98

   43 Stmt: RETURN Exp . SEMI
   63 Exp: Exp . ASSIGNOP Exp
   64    | Exp . AND Exp
   65    | Exp . OR Exp
   66    | Exp . RELOP Exp
   67    | Exp . PLUS Exp
   68    | Exp . MINUS Exp
   69    | Exp . STAR Exp
   70    | Exp . DIV Exp
   76    | Exp . LB Exp RB
   77    | Exp . DOT ID
   81    | Exp . error Exp
   82    | Exp . error

    error     shift, and go to state 105
    PLUS      shift, and go to state 106
    MINUS     shift, and go to state 107
    STAR      shift, and go to state 108
    DIV       shift, and go to state 109
    ASSIGNOP  shift, and go to state 110
    SEMI      shift, and go to state 128
    RELOP     shift, and go to state 112
    AND       shift, and go to state 113
    OR        shift, and go to state 114
    DOT       shift, and go to state 115
    LB        shift, and go to state 116


State 99

   47 Stmt: IF error . ELSE Stmt
   48     | IF error . Stmt

    error   shift, and go to state 63
    INT     shift, and go to state 64
    FLOAT   shift, and go to state 65
    ID      shift, and go to state 66
    MINUS   shift, and go to state 67
    NOT     shift, and go to state 68
    LP      shift, and go to state 69
    LC      shift, and go to state 26
    RETURN  shift, and go to state 70
    IF      shift, and go to state 71
    ELSE    shift, and go to state 129
    WHILE   shift, and go to state 72

    CompSt  go to state 73
    Stmt    go to state 130
    Exp     go to state 76


State 100

   44 Stmt: IF LP . Exp RP Stmt
   45     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 131


State 101

   49 Stmt: WHILE error . Stmt

    error   shift, and go to state 63
    INT     shift, and go to state 64
    FLOAT   shift, and go to state 65
    ID      shift, and go to state 66
    MINUS   shift, and go to state 67
    NOT     shift, and go to state 68
    LP      shift, and go to state 69
    LC      shift, and go to state 26
    RETURN  shift, and go to state 70
    IF      shift, and go to state 71
    WHILE   shift, and go to state 72

    CompSt  go to state 73
    Stmt    go to state 132
    Exp     go to state 76


State 102

   46 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 133


State 103

   38 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 38 (CompSt)


State 104

   40 StmtList: Stmt StmtList .

    $default  reduce using rule 40 (StmtList)


State 105

   81 Exp: Exp error . Exp
   82    | Exp error .

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    $default  reduce using rule 82 (Exp)

    Exp  go to state 134


State 106

   67 Exp: Exp PLUS . Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 135


State 107

   68 Exp: Exp MINUS . Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 136


State 108

   69 Exp: Exp STAR . Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 137


State 109

   70 Exp: Exp DIV . Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 138


State 110

   63 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 139


State 111

   41 Stmt: Exp SEMI .

    $default  reduce using rule 41 (Stmt)


State 112

   66 Exp: Exp RELOP . Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 140


State 113

   64 Exp: Exp AND . Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 141


State 114

   65 Exp: Exp OR . Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 142


State 115

   77 Exp: Exp DOT . ID

    ID  shift, and go to state 143


State 116

   76 Exp: Exp LB . Exp RB

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 144


State 117

   35 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 35 (VarList)


State 118

   61 Dec: VarDec error Exp .
   63 Exp: Exp . ASSIGNOP Exp
   64    | Exp . AND Exp
   65    | Exp . OR Exp
   66    | Exp . RELOP Exp
   67    | Exp . PLUS Exp
   68    | Exp . MINUS Exp
   69    | Exp . STAR Exp
   70    | Exp . DIV Exp
   76    | Exp . LB Exp RB
   77    | Exp . DOT ID
   81    | Exp . error Exp
   82    | Exp . error

    error     shift, and go to state 105
    PLUS      shift, and go to state 106
    MINUS     shift, and go to state 107
    STAR      shift, and go to state 108
    DIV       shift, and go to state 109
    ASSIGNOP  shift, and go to state 110
    RELOP     shift, and go to state 112
    AND       shift, and go to state 113
    OR        shift, and go to state 114
    DOT       shift, and go to state 115
    LB        shift, and go to state 116

    SEMI   reduce using rule 61 (Dec)
    COMMA  reduce using rule 61 (Dec)


State 119

   62 Dec: VarDec ASSIGNOP error .

    $default  reduce using rule 62 (Dec)


State 120

   60 Dec: VarDec ASSIGNOP Exp .
   63 Exp: Exp . ASSIGNOP Exp
   64    | Exp . AND Exp
   65    | Exp . OR Exp
   66    | Exp . RELOP Exp
   67    | Exp . PLUS Exp
   68    | Exp . MINUS Exp
   69    | Exp . STAR Exp
   70    | Exp . DIV Exp
   76    | Exp . LB Exp RB
   77    | Exp . DOT ID
   81    | Exp . error Exp
   82    | Exp . error
